--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "express": "^5.2.1",
     "express-validator": "^7.3.1",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.1"
+    "swagger-ui-express": "^5.0.1",
+    "uuid": "^13.0.0",
+    "uuid4": "^2.0.3"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
