--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "bcrypt": "^6.0.0",
         "express": "^5.2.1",
         "express-validator": "^7.3.1",
+        "jsonwebtoken": "^9.0.3",
         "mongodb": "^7.1.0",
         "swagger-jsdoc": "^6.2.8",
         "swagger-ui-express": "^5.0.1"
@@ -26,6 +27,7 @@
         "@types/cors": "^2.8.19",
         "@types/express": "^5.0.6",
         "@types/jest": "^30.0.0",
+        "@types/jsonwebtoken": "^9.0.10",
         "@types/node": "^25.2.2",
         "@types/supertest": "^6.0.3",
         "@types/swagger-jsdoc": "^6.0.4",
