--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -28,6 +28,7 @@ jobs:
         env:
             NODE_ENV: test
             MONGO_URL: mongodb://localhost:27017
+            JWT_SECRET: ${{ secrets.JWT_SECRET }}
             ADMIN_USERNAME: ${{ secrets.ADMIN_USERNAME }}
             ADMIN_PASSWORD: ${{ secrets.ADMIN_PASSWORD }}
 
