--- a/package.json
+++ b/package.json
@@ -14,11 +14,15 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "@types/date-fns": "^2.5.3",
+        "@types/nodemailer": "^7.0.9",
         "bcrypt": "^6.0.0",
+        "date-fns": "^4.1.0",
         "express": "^5.2.1",
         "express-validator": "^7.3.1",
         "jsonwebtoken": "^9.0.3",
         "mongodb": "^7.1.0",
+        "nodemailer": "^8.0.1",
         "swagger-jsdoc": "^6.2.8",
         "swagger-ui-express": "^5.0.1"
     },
