--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "@types/date-fns": "^2.5.3",
         "@types/nodemailer": "^7.0.9",
         "bcrypt": "^6.0.0",
+        "cookie-parser": "^1.4.7",
         "date-fns": "^4.1.0",
         "express": "^5.2.1",
         "express-validator": "^7.3.1",
@@ -28,6 +29,7 @@
     },
     "devDependencies": {
         "@types/bcrypt": "^6.0.0",
+        "@types/cookie-parser": "^1.4.10",
         "@types/cors": "^2.8.19",
         "@types/express": "^5.0.6",
         "@types/jest": "^30.0.0",
