--- a/package.json
+++ b/package.json
@@ -14,11 +14,10 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "@types/date-fns": "^2.5.3",
-        "@types/nodemailer": "^7.0.9",
         "bcrypt": "^6.0.0",
         "cookie-parser": "^1.4.7",
         "date-fns": "^4.1.0",
+        "device-detector-js": "^3.0.3",
         "express": "^5.2.1",
         "express-validator": "^7.3.1",
         "jsonwebtoken": "^9.0.3",
@@ -31,10 +30,12 @@
         "@types/bcrypt": "^6.0.0",
         "@types/cookie-parser": "^1.4.10",
         "@types/cors": "^2.8.19",
+        "@types/date-fns": "^2.5.3",
         "@types/express": "^5.0.6",
         "@types/jest": "^30.0.0",
         "@types/jsonwebtoken": "^9.0.10",
         "@types/node": "^25.2.2",
+        "@types/nodemailer": "^7.0.10",
         "@types/supertest": "^6.0.3",
         "@types/swagger-jsdoc": "^6.0.4",
         "@types/swagger-ui-express": "^4.1.8",
