--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
         "device-detector-js": "^3.0.3",
         "express": "^5.2.1",
         "express-validator": "^7.3.1",
+        "inversify": "^7.11.0",
         "jsonwebtoken": "^9.0.3",
         "mongodb": "^7.1.0",
         "nodemailer": "^8.0.1",
+        "reflect-metadata": "^0.2.2",
         "swagger-jsdoc": "^6.2.8",
         "swagger-ui-express": "^5.0.1"
     },
