--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,8 @@
         "allowSyntheticDefaultImports": true,
         "esModuleInterop": true,
         "forceConsistentCasingInFileNames": true,
+        "experimentalDecorators": true,
+        "emitDecoratorMetadata": true,
         "strict": true,
         "skipLibCheck": true
     },
