--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "inversify": "^7.11.0",
         "jsonwebtoken": "^9.0.3",
         "mongodb": "^7.1.0",
+        "mongoose": "^9.2.1",
         "nodemailer": "^8.0.1",
         "reflect-metadata": "^0.2.2",
         "swagger-jsdoc": "^6.2.8",
